plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.0' // 4.0.0은 아직 없거나 불안정할 수 있음, 안정적인 3.x 버전 권장
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.kh'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // 웹 관련 기능 (Tomcat, MVC 등 포함) - 여기가 틀렸었음
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // JPA (DB 연결)
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    implementation 'jakarta.validation:jakarta.validation-api'

    // 롬복
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // 개발 툴 (서버 자동 재시작 등)
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // H2 데이터베이스
    runtimeOnly 'com.h2database:h2'

    // 테스트
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // JWT (JSON Web Token)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
}

tasks.named('test') {
    useJUnitPlatform()
}